--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<script type="text/javascript" src="js/magnific-popup.js"></script>
 	<script src="contactform/contactform.js"></script>
 
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<!-- =======================================================
     Theme Name: Knight
     Theme URL: https://bootstrapmade.com/knight-free-bootstrap-theme/
@@ -47,9 +48,8 @@
 			</figure>
 			<h1 class="animated fadeInDown delay-07s">Tierarztpraxis Beate Zietz</h1>
 			<ul class="we-create animated fadeInUp delay-1s">
-				<li>We are a digital agency that loves crafting beautiful websites.</li>
+				<li>Ihre Tierarztpraxis für Kleintiere in Densberg.</li>
 			</ul>
-			<a class="link animated fadeInUp delay-1s servicelink" href="#service">Get Started</a>
 		</div>
 	</header>
 	<!--header-end-->
@@ -188,19 +188,19 @@
 			<div class="row">
 				<div class="col-lg-6 col-sm-7 wow fadeInLeft">
 					<div class="contact-info-box address clearfix">
-						<h3><i class=" icon-map-marker"></i>Address:</h3>
-						<span>308 Negra Arroyo Lane<br>Albuquerque, New Mexico, 87111.</span>
+						<h3><i class=" icon-map-marker"></i>Addresse:</h3>
+						<span>Gilsatalstraße 2<br>34632 Densberg</span>
 					</div>
 					<div class="contact-info-box phone clearfix">
-						<h3><i class="fa fa-phone"></i>Phone:</h3>
-						<span>1-800-BOO-YAHH</span>
+						<h3><i class="fa fa-phone"></i>Telefon:</h3>
+						<span>06695 242</span>
 					</div>
 					<div class="contact-info-box email clearfix">
-						<h3><i class="fa fa-pencil"></i>email:</h3>
-						<span>hello@knightstudios.com</span>
+						<h3><i class="fa fa-pencil"></i>E-Mail:</h3>
+						<span>123.de</span>
 					</div>
 					<div class="contact-info-box hours clearfix">
-						<h3><i class="fa fa-clock-o"></i>Hours:</h3>
+						<h3><i class="fa fa-clock-o"></i>Sprechzeiten:</h3>
 						<span><strong>Monday - Thursday:</strong> 10am - 6pm<br><strong>Friday:</strong> People work on Fridays now?<br><strong>Saturday - Sunday:</strong> Best not to ask.</span>
 					</div>
 				</div>
