--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, maximum-scale=1">
 
-	<title>Homepage</title>
+	<title>Tierarzt Zietz</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -75,7 +75,7 @@
 			<h2>Angebot</h2>
 			<h6>Ich biete folgende Dinge an.</h6>
 			<div class="row">
-				<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
 					<div class="service-list">
 						<div class="service-list-col1">
 							<i class="fa fa-paw"></i>
@@ -113,7 +113,7 @@
 						</div>
 					</div>
 				</div>
-				<figure class="col-lg-8 col-sm-6 text-right wow fadeInUp delay-02s ">
+				<figure class="col-lg-7 col-sm-6 text-right wow fadeInUp delay-02s ">
 					<img src="img/namu1.jpg" class="shadow" alt="">
 				</figure>
 
@@ -128,10 +128,10 @@
 			<h2>Services</h2>
 			<h6>We offer exceptional service with complimentary hugs.</h6>
 			<div class="row">
-				<figure class="col-lg-8 col-sm-6  text-left wow fadeInUp delay-02s">
-					<img src="img/namu6.JPG" class="shadow" alt="">
+				<figure class="col-lg-7 col-sm-6  text-left wow fadeInUp delay-02s">
+					<img src="img/homoe.jpg" class="shadow p-5" alt="">
 				</figure>
-				<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+				<div class="col-lg-5 col-sm-6 wow fadeInRight delay-05s">
 					<div class="service-list">
 						<div class="service-list-col1">
 							<i class="fa fa-paw"></i>
@@ -175,42 +175,50 @@
 	</section>
 	<!--main-section-end-->
 
-	<section class="business-talking">
-		<!--business-talking-start-->
+	<section class="main-section" id="contact">
+		<!--main-section-start-->
 		<div class="container">
 			<h2>Kontakt</h2>
-		</div>
-	</section>
-	<!--business-talking-end-->
-	<div class="container">
-		<section class="main-section contact" id="contact">
+			<h6>We offer exceptional service with complimentary hugs.</h6>
 
 			<div class="row">
-				<div class="col-lg-6 col-sm-7 wow fadeInLeft">
-					<div class="contact-info-box address clearfix">
-						<h3><i class=" icon-map-marker"></i>Addresse:</h3>
-						<span>Gilsatalstraße 2<br>34632 Densberg</span>
+				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-map"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>branding &amp; identity</h3>
+							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+						</div>
 					</div>
-					<div class="contact-info-box phone clearfix">
-						<h3><i class="fa fa-phone"></i>Telefon:</h3>
-						<span>06695 242</span>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-clock"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>web development</h3>
+							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+						</div>
 					</div>
-					<div class="contact-info-box email clearfix">
-						<h3><i class="fa fa-pencil"></i>E-Mail:</h3>
-						<span>123.de</span>
-					</div>
-					<div class="contact-info-box hours clearfix">
-						<h3><i class="fa fa-clock-o"></i>Sprechzeiten:</h3>
-						<span><strong>Monday - Thursday:</strong> 10am - 6pm<br><strong>Friday:</strong> People work on Fridays now?<br><strong>Saturday - Sunday:</strong> Best not to ask.</span>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-clock"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>web development</h3>
+							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+						</div>
 					</div>
 				</div>
-				<div class="col-lg-6 col-sm-5 wow fadeInUp delay-05s">
-					
-					</div>
+				<figure class="col-lg-7 col-sm-6 text-right wow fadeInUp delay-02s ">
+					<img src="img/contact.jpg" class="shadow" alt="">
+				</figure>
 				</div>
 			</div>
 		</section>
-	</div>
+
+
 	<footer class="footer">
 		<div class="container">
 			<div class="footer-logo"><a href="#"><img src="img/footer-logo.png" alt=""></a></div>
@@ -262,7 +270,7 @@
 				var $anchor = $(this);
 
 				$('html, body').stop().animate({
-					scrollTop: $($anchor.attr('href')).offset().top - 102
+					scrollTop: $($anchor.attr('href')).offset().top - 50
 				}, 1500, 'easeInOutExpo');
 				/*
 				if you don't want to use the easing effects:
