--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</figure>
 			<h1 class="animated fadeInDown delay-07s">Tierarztpraxis Beate Zietz</h1>
 			<ul class="we-create animated fadeInUp delay-1s">
-				<li>Ihre Tierarztpraxis für Kleintiere in Densberg.</li>
+				<li>Ihre Tierarztpraxis für Kleintiere in Densberg</li>
 			</ul>
 		</div>
 	</header>
@@ -58,10 +58,10 @@
 		<!--main-nav-start-->
 		<div class="container">
 			<ul class="main-nav">
-				<li><a href="#header">Home</a></li>
-				<li><a href="#services">Angebot</a></li>
-				<li class="small-logo"><a href="#header"><img src="img/small-logo.png" alt=""></a></li>
-				<li><a href="#alternative">Homöopathie</a></li>
+				<li><a href="#services">Leistungen</a></li>
+				<li><a href="#homo">Homöopathie</a></li>
+				<li class="small-logo"><a href="#header"><img class="smaller-logo" src="img/logo.png" alt=""></a></li>
+				<li><a href="#osto">Osteopathie</a></li>
 				<li><a href="#contact">Kontakt</a></li>
 			</ul>
 			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
@@ -72,7 +72,113 @@
 	<section class="main-section" id="services">
 		<!--main-section-start-->
 		<div class="container">
-			<h2>Angebot</h2>
+			<h2>Leistungen</h2>
+			<h6>Ich biete folgende Leistungen an.</h6>
+			<div class="row">
+				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Behandlung</h3>
+							<p>Behandlung akuter und chronischer Erkrankungen der kleinen Haustiere.</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Impfberatung und Impfung</h3>
+							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Kastration von Katern</h3>
+							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3> Kennzeichnung</h3>
+							<p>Kennzeichnung (Mikrochip), EU-Heimtierausweis.</p>
+						</div>
+					</div>
+				</div>
+				<figure class="col-lg-7 col-sm-6 text-right wow fadeInUp delay-02s ">
+					<img src="img/namu1.jpg" class="shadow" alt="">
+				</figure>
+
+			</div>
+		</div>
+	</section>
+	<!--main-section-end-->
+
+	<section class="main-section" id="homo">
+		<!--main-section-start-->
+		<div class="container">
+			<h2>Homöopathie</h2>
+			<h6>We offer exceptional service with complimentary hugs.</h6>
+			<div class="row">
+				<figure class="col-lg-7 col-sm-6 text-left wow fadeInUp delay-02s">
+					<img src="img/homoe.jpg" class="shadow p-5" alt="">
+				</figure>
+				<div class="col-lg-5 col-sm-6 wow fadeInRight delay-05s">
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Komplexmittel</h3>
+							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3> Klassische Einzelmittelhomöopathie</h3>
+							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Homöopathische Anamnese</h3>
+							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-paw"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Konstitutionsmittel</h3>
+							<p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+	<!--main-section-end-->
+
+	<section class="main-section" id="osto">
+		<!--main-section-start-->
+		<div class="container">
+			<h2>Osteopathie</h2>
 			<h6>Ich biete folgende Dinge an.</h6>
 			<div class="row">
 				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
@@ -81,34 +187,34 @@
 							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>branding &amp; identity</h3>
+							<h3>Traumatherapie</h3>
 							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
 						</div>
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-gear"></i>
+							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>web development</h3>
+							<h3>Craniosacrale Osteopathie</h3>
 							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
 						</div>
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-apple"></i>
+							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>mobile design</h3>
+							<h3>Viscerale Osteopathie</h3>
 							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
 						</div>
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-medkit"></i>
+							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>24/7 Support</h3>
+							<h3>Geriatrie</h3>
 							<p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
 						</div>
 					</div>
@@ -122,64 +228,11 @@
 	</section>
 	<!--main-section-end-->
 
-	<section class="main-section" id="alternative">
-		<!--main-section-start-->
-		<div class="container">
-			<h2>Services</h2>
-			<h6>We offer exceptional service with complimentary hugs.</h6>
-			<div class="row">
-				<figure class="col-lg-7 col-sm-6  text-left wow fadeInUp delay-02s">
-					<img src="img/homoe.jpg" class="shadow p-5" alt="">
-				</figure>
-				<div class="col-lg-5 col-sm-6 wow fadeInRight delay-05s">
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>branding &amp; identity</h3>
-							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-gear"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>web development</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-apple"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>mobile design</h3>
-							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-medkit"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>24/7 Support</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</section>
-	<!--main-section-end-->
-
 	<section class="main-section" id="contact">
 		<!--main-section-start-->
 		<div class="container">
 			<h2>Kontakt</h2>
-			<h6>We offer exceptional service with complimentary hugs.</h6>
+			<h6>So erreichen Sie mich.</h6>
 
 			<div class="row">
 				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
@@ -188,8 +241,26 @@
 							<i class="fa fa-map"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>branding &amp; identity</h3>
-							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+							<h3>Anschrift</h3>
+							<p>Gislatalstraße 2, 34632 Densberg</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-phone"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Telefon</h3>
+							<p>06695 12344321</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-envelope"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>E-Mail</h3>
+							<p>test@gmx.de</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -197,17 +268,8 @@
 							<i class="fa fa-clock"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>web development</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fa fa-clock"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>web development</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+							<h3>Sprechzeiten</h3>
+							<p>Mo-Fr, 10-13 Uhr</p>
 						</div>
 					</div>
 				</div>
