--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Behandlung</h3>
-							<p>Behandlung akuter und chronischer Erkrankungen der kleinen Haustiere.</p>
+							<p>Ich behandle akute und chronische Erkrankungen der kleinen Haustiere.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -91,7 +91,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Impfberatung und Impfung</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+							<p>Gerne stehe ich Ihnen sowohl für eine Impfberatung als auch für die Durchführung der Impfung selbst zu Verfügung.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -99,8 +99,8 @@
 							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>Kastration von Katern</h3>
-							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
+							<h3>Kastration</h3>
+							<p>Sie können bei mir Ihren Kater kastrieren lassen.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -109,12 +109,12 @@
 						</div>
 						<div class="service-list-col2">
 							<h3> Kennzeichnung</h3>
-							<p>Kennzeichnung (Mikrochip), EU-Heimtierausweis.</p>
+							<p> Zum den Themen Kennzeichnung, "Chippen" und EU-Heimtierausweis berate ich Sie gern. Das Implementieren des Chips sowie alle dazugehörigen bürokratischen Vorgänge biete ich ebenfalls an.</p>
 						</div>
 					</div>
 				</div>
 				<figure class="col-lg-7 col-sm-6 text-right wow fadeInUp delay-02s ">
-					<img src="img/namu1.jpg" class="shadow" alt="">
+					<img src="img/blixa.JPG" class="shadow" alt="">
 				</figure>
 
 			</div>
@@ -126,10 +126,10 @@
 		<!--main-section-start-->
 		<div class="container">
 			<h2>Homöopathie</h2>
-			<h6>We offer exceptional service with complimentary hugs.</h6>
+			<h6>Im Bereich der homöophatischen Behandlung biete ich folgende Leistungen an.</h6>
 			<div class="row">
 				<figure class="col-lg-7 col-sm-6 text-left wow fadeInUp delay-02s ">
-					<img src="img/homoe.jpg" class="shadow p-5" alt="">
+					<img src="img/brennessel.jpeg" class="shadow p-5" alt="">
 				</figure>
 				<div class="col-lg-5 col-sm-6 wow fadeInRight delay-05s">
 					<div class="service-list">
@@ -179,7 +179,7 @@
 		<!--main-section-start-->
 		<div class="container">
 			<h2>Osteopathie</h2>
-			<h6>Ich biete folgende Dinge an.</h6>
+			<h6>Innerhalb der "Manuellen Medizin" bieten ich folgende Leistungen an.</h6>
 			<div class="row">
 				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
 					<div class="service-list">
@@ -242,7 +242,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Anschrift</h3>
-							<p>Gislatalstraße 2, 34632 Densberg</p>
+							<p>Gilsatalstraße 2, 34632 Densberg</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -251,7 +251,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Telefon</h3>
-							<p>06695 12344321</p>
+							<p>06695/911856</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -260,7 +260,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>E-Mail</h3>
-							<p>test@gmx.de</p>
+							<p>beate.zietz@gmx.eu</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -269,7 +269,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Sprechzeiten</h3>
-							<p>Mo-Fr, 10-13 Uhr</p>
+							<p>Nach telefonsicher Vereinbarung</p>
 						</div>
 					</div>
 				</div>
