--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Sprechzeiten</h3>
-							<p>Nach telefonsicher Vereinbarung</p>
+							<p>Nach telefonischer Vereinbarung</p>
 						</div>
 					</div>
 				</div>
