--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" integrity="sha256-39jKbsb/ty7s7+4WzbtELS4vq9udJ+MDjGTD5mtxHZ0=" crossorigin="anonymous" />
+
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
 
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
-	<link href="css/font-awesome.css" rel="stylesheet" type="text/css">
 	<link href="css/responsive.css" rel="stylesheet" type="text/css">
 	<link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
 	<link href="css/animate.css" rel="stylesheet" type="text/css">
@@ -29,7 +30,6 @@
 	<script type="text/javascript" src="js/magnific-popup.js"></script>
 	<script src="contactform/contactform.js"></script>
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<!-- =======================================================
     Theme Name: Knight
     Theme URL: https://bootstrapmade.com/knight-free-bootstrap-theme/
@@ -78,7 +78,7 @@
 				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Behandlung</h3>
@@ -129,12 +129,12 @@
 			<h6>Im Bereich der homöophatischen Behandlung biete ich folgende Leistungen an.</h6>
 			<div class="row">
 				<figure class="col-lg-7 col-sm-6 text-left wow fadeInUp delay-02s ">
-					<img src="img/brennessel.jpeg" class="shadow p-5" alt="">
+					<img src="img/homoe.JPG" class="shadow p-5" alt="">
 				</figure>
 				<div class="col-lg-5 col-sm-6 wow fadeInRight delay-05s">
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-spa"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Komplexmittel</h3>
@@ -143,7 +143,7 @@
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-spa"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3> Klassische Einzelmittelhomöopathie</h3>
@@ -152,7 +152,7 @@
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-spa"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Homöopathische Anamnese</h3>
@@ -161,7 +161,7 @@
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-spa"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Konstitutionsmittel</h3>
@@ -184,7 +184,7 @@
 				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-sign-language"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Traumatherapie</h3>
@@ -193,7 +193,7 @@
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-sign-language"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Craniosacrale Osteopathie</h3>
@@ -202,7 +202,7 @@
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-sign-language"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Viscerale Osteopathie</h3>
@@ -211,7 +211,7 @@
 					</div>
 					<div class="service-list">
 						<div class="service-list-col1">
-							<i class="fa fa-paw"></i>
+							<i class="fas fa-sign-language"></i>
 						</div>
 						<div class="service-list-col2">
 							<h3>Geriatrie</h3>
