--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, maximum-scale=1">
+    <meta name="description" content="Tierarztpraxis Beate Zietz in Densberg. Ihr Tierarzt für akute und chronische Behandlung der Kleintiere.">
 
 	<title>Tierarzt Zietz</title>
 	<link rel="icon" href="favicon.png" type="image/png">
@@ -73,7 +74,7 @@
 		<!--main-section-start-->
 		<div class="container">
 			<h2>Leistungen</h2>
-			<h6>Ich biete folgende Leistungen an.</h6>
+			<h6>Ich biete folgende Basisleistungen an.</h6>
 			<div class="row">
 				<div class="col-lg-5 col-sm-6 wow fadeInLeft delay-05s">
 					<div class="service-list">
@@ -91,7 +92,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Impfberatung und Impfung</h3>
-							<p>Gerne stehe ich Ihnen sowohl für eine Impfberatung als auch für die Durchführung der Impfung selbst zu Verfügung.</p>
+							<p>Nach einer ausführlichen Impfberatung führe ich bei Ihrem Hund oder Ihrer Katze gerne die notwendigen und vorgeschriebenen Impfungen durch.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -99,8 +100,8 @@
 							<i class="fa fa-paw"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>Kastration</h3>
-							<p>Sie können bei mir Ihren Kater kastrieren lassen.</p>
+							<h3>Ernährungsberatung</h3>
+							<p>Die richtige Ernährung kann viel zur Heilung beitragen. Eine ausführliche Ernährungsberatung ist in meiner Praxis fester Bestandteil der ganzheitlichen Behandlung.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -109,7 +110,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3> Kennzeichnung</h3>
-							<p> Zum den Themen Kennzeichnung, "Chippen" und EU-Heimtierausweis berate ich Sie gern. Das Implementieren des Chips sowie alle dazugehörigen bürokratischen Vorgänge biete ich ebenfalls an.</p>
+							<p> Dies beinhaltet das Chippen (Kennzeichnen) und Ausstellen eines EU-Heimtierausweises.</p>
 						</div>
 					</div>
 				</div>
@@ -138,7 +139,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Komplexmittel</h3>
-							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
+							<p> In meiner Praxis kommen vorallem bei akuten Erkrankungen und Verletzungen diese bewährte Kombinationen homöopathischer Mittel zur Anwendung.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -147,7 +148,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3> Klassische Einzelmittelhomöopathie</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+							<p>Besonders bei chronischen Erkrankungen, z.B. Erkrankungen der Haut, des  Nervensystems (Epilepsie) oder Verhaltensstörungen muss das passende Einzelmittel, das "Konstitutionsmittel", gefunden werden.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -156,7 +157,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Homöopathische Anamnese</h3>
-							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
+							<p>Durch diese ausführliche Befragung der Besitzer und ganzheitliche Untersuchung des Tieres finde ich nach der Auswertung (Repertorisation) das passende Konstitutionsmittel für ein erkranktes Tier.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -165,7 +166,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Konstitutionsmittel</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
+							<p>Ein Konstitutionsmittel berücksichtigt ganzheitlich nicht nur die aktuelle Erkrankung des Tieres, sondern auch Vorerkrankungen, Haltung, Umfeld, Charakter u.v.m..</p>
 						</div>
 					</div>
 				</div>
