--- a/index.html
+++ b/index.html
@@ -188,17 +188,8 @@
 							<i class="fas fa-sign-language"></i>
 						</div>
 						<div class="service-list-col2">
-							<h3>Traumatherapie</h3>
-							<p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
-						</div>
-					</div>
-					<div class="service-list">
-						<div class="service-list-col1">
-							<i class="fas fa-sign-language"></i>
-						</div>
-						<div class="service-list-col2">
-							<h3>Craniosacrale Osteopathie</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+							<h3>Osteopathie</h3>
+							<p>Besonders chronische Erkrankungen können durch diese ganzheitliche Heilmethoden tiefgreifend geheilt werden. Der Osteopath erkennt körperliche und seelische Ursachen und aktiviert durch seine Hände, durch "BeHANDlung", die Selbstheilungskräfte des Patienten.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -207,7 +198,16 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Viscerale Osteopathie</h3>
-							<p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
+							<p>Hier liegt der Schwerpunkt auf Störungen im Bereich des Magen-Darm-Traktes und der Urogenitalorgane. Auch Beschweden durch Narben nach Operationen können durch viszerale Osteopathie geheilt werden.</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fas fa-sign-language"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Craniosacrale Osteopathie</h3>
+							<p>Die BeHANDlung der Strukturen zwischen Kranium (Schädel) und Sakrum (Kreuzbein) löst Blockaden in Muskeln und Faszien, aber auch psychische Blockaden auf.</p>
 						</div>
 					</div>
 					<div class="service-list">
@@ -216,7 +216,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Geriatrie</h3>
-							<p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
+							<p>Die Behandlung des alten Hundes kann in Kombination mit Homöopathie zu mehr Bewegungsfreude und damit Lebensfreude führen. Alte Wunden werden aufgespürt und geheilt.</p>
 						</div>
 					</div>
 				</div>
