--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 						</div>
 						<div class="service-list-col2">
 							<h3>Viscerale Osteopathie</h3>
-							<p>Hier liegt der Schwerpunkt auf Störungen im Bereich des Magen-Darm-Traktes und der Urogenitalorgane. Auch Beschweden durch Narben nach Operationen können durch viszerale Osteopathie geheilt werden.</p>
+							<p>Hier liegt der Schwerpunkt auf Störungen im Bereich des Magen-Darm-Traktes und der Urogenitalorgane. Auch Beschwerden durch Narben nach Operationen können durch viszerale Osteopathie geheilt werden.</p>
 						</div>
 					</div>
 					<div class="service-list">
